--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
 									<!-- Content -->
 										<h2 id="content">Meu nome é Deivisson Cunha</h2>
-										<p>Profissional em transição para Ciência de Dados, com mais de 15 anos de experiência em pesquisa, inovação e análise de dados experimentais, incluindo otimização de processos, simulações e aplicações de estatística e inteligência artificial em problemas complexos de água, efluentes e óleo e gás. Doutor em Meio Ambiente, com habilidades em Python, SQL, estatística descritiva, Design of Experiments (DoE), machine learning em formação e produção científica considerável (mais de 15 artigos publicados).</p>
-										<p>Atualmente estou cursando o programa de formação de cientista de dados da Comunidade DS, sendo que possuo habilidades em análises de dados em SQL e Python e a parte de machine learning está em formação.</p>
+										<p>Profissional em transição para Ciência de Dados, com mais de 15 anos de experiência em pesquisa, inovação e análise de dados experimentais, incluindo otimização de processos, simulações e aplicações de estatística e inteligência artificial em problemas complexos de água, efluentes e óleo e gás. Doutor em Meio Ambiente, com habilidades em Python, SQL, estatística descritiva, Design of Experiments (DoE), machine learning e produção científica considerável (mais de 15 artigos publicados).</p>
+										<p>Atualmente estou cursando o programa de formação de cientista de dados da Comunidade DS, sendo que possuo habilidades em análises de dados com SQL e Python e machine learning.</p>
 										<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados.</p>
 								</section>
 										<!-- Section -->
@@ -78,8 +78,10 @@
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
 													<li>Estatística descritiva</li>
-													<li>Planejamento e otimização de experimentos (DoE)</li>
-													<li>Machine Learning em desenvolvimento</li>
+													<li>Algoritmos de regressão, classificação e clusterização</li>
+													<li>Métricas de avaliação dos algoritmos de machine learning</li>
+													<li>Pacote de Machine Learning: scikit-learn</li>
+													<li>Planejamento e otimização de experimentos (DoE)</li>													
 												</ul>
 											</div>
 										</article>
@@ -171,6 +173,25 @@
 												<li><a href="#" class="button">Saiba mais</a></li>
 											</ul>
 										</article> -->
+										<article>
+											<a href="#" class="image"><img src="images/ensaio_ml.jpg" alt="" /></a>
+											<h3>Ensaio de Machine Learning</h3>
+											<p>Neste projeto, desenvolvi um ensaio deMachine Learning focado na análise comparativa de algoritmos de classificação, regressão e agrupamento, explorando de forma prática o impacto do ajuste de hiperparâmetros e o equilíbrio entre overfitting e underfitting.</p>
+											<p>Foi desenvolvido um painel analítico de performance, permitindo visualizar como a variação dos principais parâmetros influencia os resultados dos modelos, proporcionando uma visão estratégica sobre tuning, generalização e tomada de decisão orientada a métricas — com foco em aplicação prática e robustez de modelos.</p>
+
+											<h4>Ferramentas utilizadas:</h4>
+											<ul>
+												<li>Python 3.11 e Scikit-learn</li>
+												<li>Algoritmos de classificação: KNN, Decision Tree, Random Forest e Logistic Regression</li>
+												<li>Algoritmos de regressão: Linear e Polinomial Regression (Lasso, Ridge, Elastic Net, Ransac), Decision Tree Regressor, Random Forest Regressor</li>
+												<li>Algoritmos de agrupamento: K-Means e Affinity Propagation</li>
+												<li>Métricas de avaliação: Accuracy, Precision, Recall e F1-Score, R2, MSE, RMSE, MAE e MAPE, Silhouette Score </li>
+												<li>GitHub</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/deivissoncunha/zomato_delivery" class="button">Saiba mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 							<!-- Section -->
@@ -305,3 +326,4 @@
 	</body>
 
 </html>
+
