--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 											</ul>
 										</article> -->
 										<article>
-											<a href="#" class="image"><img src="images/ensaio_ml.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/ensaio_ml.png" alt="" with="1200" height="600" /></a>
 											<h3>Ensaio de Machine Learning</h3>
 											<p>Neste projeto, desenvolvi um ensaio deMachine Learning focado na análise comparativa de algoritmos de classificação, regressão e agrupamento, explorando de forma prática o impacto do ajuste de hiperparâmetros e o equilíbrio entre overfitting e underfitting.</p>
 											<p>Foi desenvolvido um painel analítico de performance, permitindo visualizar como a variação dos principais parâmetros influencia os resultados dos modelos, proporcionando uma visão estratégica sobre tuning, generalização e tomada de decisão orientada a métricas — com foco em aplicação prática e robustez de modelos.</p>
@@ -326,4 +326,5 @@
 	</body>
 
 </html>
+
 
