--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 											</ul>
 										</article> -->
 										<article>
-											<a href="#" class="image"><img src="images/ensaio_ml.png" alt="" with="1200" height="600" /></a>
+											<a href="https://github.com/deivissoncunha/ensaio-machine-learning" class="image"><img src="images/ensaio_ml.png" alt="" width="1200" height="600" /></a>
 											<h3>Ensaio de Machine Learning</h3>
 											<p>Neste projeto, desenvolvi um ensaio deMachine Learning focado na análise comparativa de algoritmos de classificação, regressão e agrupamento, explorando de forma prática o impacto do ajuste de hiperparâmetros e o equilíbrio entre overfitting e underfitting.</p>
 											<p>Foi desenvolvido um painel analítico de performance, permitindo visualizar como a variação dos principais parâmetros influencia os resultados dos modelos, proporcionando uma visão estratégica sobre tuning, generalização e tomada de decisão orientada a métricas — com foco em aplicação prática e robustez de modelos.</p>
@@ -189,7 +189,7 @@
 												<li>GitHub</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/deivissoncunha/zomato_delivery" class="button">Saiba mais</a></li>
+												<li><a href="https://github.com/deivissoncunha/ensaio-machine-learning" class="button">Saiba mais</a></li>
 											</ul>
 										</article>
 									</div>
@@ -326,5 +326,6 @@
 	</body>
 
 </html>
+
 
 
