--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 											</ul>
 										</article> -->
 										<article>
-											<a href="https://github.com/deivissoncunha/ensaio-machine-learning" class="image"><img src="images/ensaio_ml.png" alt="" width="500" height="250" /></a>
+											<a href="https://github.com/deivissoncunha/ensaio-machine-learning" class="image"><img src="images/ensaio_ml.webp" alt="" /></a>
 											<h3>Ensaio de Machine Learning</h3>
 											<p>Neste projeto, desenvolvi um ensaio deMachine Learning focado na análise comparativa de algoritmos de classificação, regressão e agrupamento, explorando de forma prática o impacto do ajuste de hiperparâmetros e o equilíbrio entre overfitting e underfitting.</p>
 											<p>Foi desenvolvido um painel analítico de performance, permitindo visualizar como a variação dos principais parâmetros influencia os resultados dos modelos, proporcionando uma visão estratégica sobre tuning, generalização e tomada de decisão orientada a métricas — com foco em aplicação prática e robustez de modelos.</p>
@@ -185,8 +185,7 @@
 												<li>Algoritmos de classificação: KNN, Decision Tree, Random Forest e Logistic Regression</li>
 												<li>Algoritmos de regressão: Linear e Polinomial Regression (Lasso, Ridge, Elastic Net, Ransac), Decision Tree Regressor, Random Forest Regressor</li>
 												<li>Algoritmos de agrupamento: K-Means e Affinity Propagation</li>
-												<li>Métricas de avaliação: Accuracy, Precision, Recall e F1-Score, R2, MSE, RMSE, MAE e MAPE, Silhouette Score </li>
-												<li>GitHub</li>
+												<li>Métricas de avaliação: Accuracy, Precision, Recall e F1-Score, R2, MSE, RMSE, MAE e MAPE, Silhouette Score </li>												
 											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/deivissoncunha/ensaio-machine-learning" class="button">Saiba mais</a></li>
@@ -326,6 +325,7 @@
 	</body>
 
 </html>
+
 
 
 
